--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <body>
     <div class="container">
-        <h1>"¡¡¡Happy Birthday Dear Sky!!!"</h1>
+        <h1>"¡¡¡Happy Birthday Dear Hong Yi!!!"</h1>
         <button id="flowerButton" onclick="startCountdown()">Press here!!!</button>
         <div id="countdown"></div>
     </div>
